# aim-build

./: .coveragerc-ci  .flake8  .gitignore  .pre-commit-config.yaml  .python-version  Makefile  README.md  makefile-defaults.mk  pyproject.toml
docker/: Dockerfile.aim  Dockerfile.aim-base
docs/: aim_architecture.md  custom_profiles.md  deployment_overview.md  docker_deployment.md  engine-args-override.md  kserve_deployment.md  kubernetes_deployment.md  latest_aims.md  model_caching.md  overview.md  toctree.md
docs/docs-aim/base/: DEPLOYMENT.md  README.md
docs/templates/: DEPLOYMENT.md  README.md  latest_aims_template.md  override_template.yaml
metadata/CohereLabs/command-a-reasoning-08-2025/: metadata.yaml
metadata/Qwen/Qwen3-235B-A22B/: metadata.yaml
metadata/Qwen/Qwen3-32B/: metadata.yaml
metadata/base/: metadata.yaml
metadata/meta-llama/Llama-3.1-405B-Instruct/: metadata.yaml
metadata/meta-llama/Llama-3.1-8B-Instruct/: metadata.yaml
metadata/meta-llama/Llama-3.2-1B-Instruct/: metadata.yaml
metadata/meta-llama/Llama-3.2-3B-Instruct/: metadata.yaml
metadata/meta-llama/Llama-3.3-70B-Instruct/: metadata.yaml
metadata/mistralai/Mistral-Small-3.2-24B-Instruct-2506/: metadata.yaml
metadata/mistralai/Mixtral-8x22B-Instruct-v0.1/: metadata.yaml
metadata/openai/gpt-oss-120b/: metadata.yaml
profiles/general/: vllm-mi300x-fp16-tp1-latency.yaml  vllm-mi300x-fp16-tp1-throughput.yaml  vllm-mi300x-fp16-tp2-latency.yaml  vllm-mi300x-fp16-tp2-throughput.yaml  vllm-mi300x-fp16-tp4-latency.yaml  vllm-mi300x-fp16-tp4-throughput.yaml  vllm-mi300x-fp16-tp8-latency.yaml  vllm-mi300x-fp16-tp8-throughput.yaml  vllm-mi325x-fp16-tp1-latency.yaml  vllm-mi325x-fp16-tp1-throughput.yaml  vllm-mi325x-fp16-tp2-latency.yaml  vllm-mi325x-fp16-tp2-throughput.yaml  vllm-mi325x-fp16-tp4-latency.yaml  vllm-mi325x-fp16-tp4-throughput.yaml  vllm-mi325x-fp16-tp8-latency.yaml  vllm-mi325x-fp16-tp8-throughput.yaml
requirements/: dev-requirements.txt  requirements.txt  test-requirements.txt
schemas/: base_metadata_schema.json  general_profile_schema.json  metadata_schema.json  model_profile_schema.json  vllm_engine_schema.json
src/: entrypoint.py
src/aim_common/: __init__.py  object_model.py
src/aim_runtime/: __init__.py  aim_runtime.py  command_generator.py  config.py  gpu_detector.py  logging_config.py  model_cache_resolver.py  model_storage.py  object_model.py  profile_registry.py  profile_selector.py  profile_validator.py
tests/: conftest.py  test_entrypoint.py
tests/aim_common/: test_profile_metadata.py
tests/aim_runtime/: test_aim_runtime.py  test_command_generator.py  test_command_generator_engine_args.py  test_config.py  test_config_engine_args.py  test_gpu_detector.py  test_gpu_detector_integration.py  test_logging_config.py  test_model_cache_resolver.py  test_model_storage.py  test_profile_registry.py  test_profile_selector.py  test_profile_validator.py
utils/: check_copyright.py  clone_profiles.py  sort_yaml_keys.py
(+198 files in other folders)
